--- a/themes/hps/style.css
+++ b/themes/hps/style.css
@@ -98,12 +98,12 @@ a {text-decoration:none; color:#0575d4;}
 #login {margin-top:115px;margin-left:30px; height:100px; position:relative;}
 
 .input_boxLogin {margin:3px 3px 3px 15px !important; padding:0 !important; border:none; float:left; height:21px; background-color:#f2f7fb;  border: 1px solid #a7b7d3;}
-.btn_login { border:none; margin:0; padding:0; width:51px !important; height:54px; /*background:url(images/btnGo.png) top left no-repeat ;*/ cursor:pointer; position:absolute; right:50px; top:0;}
+.btn_login { border:none; padding:0; width:51px !important; text-align:center; /*background:url(images/btnGo.png) top left no-repeat ;*/ cursor:pointer; /*position:absolute; right:50px; top:0;*/ }
 .linkRegis {color:#ff2a00;font-weight:bold;}
 a.linkRegis {color:#ff2a00;font-weight:bold;}
 a.linkRegis:hover {color:#e32601;font-weight:bold;}
 .Chick{ background:url(images/Chick.png) no-repeat; width:177px; height:38px;display:block; padding-top:8px;}
-.lineRegis{height:1px; border:none; border-top: 1px solid #d3bda7; width:186px; margin:0; padding-bottom:6px;}
+.lineRegis{height:1px; border:none; border-top: 1px solid #d3bda7; margin:0; padding-bottom:6px;}
 
 
 /* calendar */
