--- a/themes/print/css/style.css
+++ b/themes/print/css/style.css
@@ -18,7 +18,7 @@
 .dbJariyathamXbd {  font-family: 'dbJariyathamXbd';  }
 
 
-#bg-diploma{width:1100px; height:832px; margin:0 auto; background-image:url(../images/bg-diploma.jpg);}
+#bg-diploma{width:1100px; height:781px; margin:0 auto; background:url(../images/bg-diploma.jpg)no-repeat;}
 .logo{text-align:center;  margin:0 auto; width:135px; height:135px; background-image:url(../images/logo-ddc.png);}
 .text1{  font-family: 'dbJariyathamXbd';  font-size:35px; text-align:center; }
 
