--- a/themes/print/css/style.css
+++ b/themes/print/css/style.css
@@ -19,7 +19,7 @@
 
 
 #bg-diploma{width:1100px; height:781px; margin:0 auto; background:url(../images/bg-diploma.jpg)no-repeat;}
-.logo{text-align:center;  margin:0 auto; width:135px; height:135px; background-image:url(../images/logo-ddc.png);}
+.logo{text-align:center;  margin:10px auto; width:150px; height:142px; background-image:url(../images/logo_dept.png);}
 .text1{  font-family: 'dbJariyathamXbd';  font-size:35px; text-align:center; }
 
 
